--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>We're sorry but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -51,16 +51,105 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
+
+  .background {
+    background-color: #EFF8FF;
+  }
+
+.banner2 {
+
+    background-size: cover;
+    background-position: center;
+    background-color: #11101D;
+    transform: rotate(7deg);
+    width: 110%;
+    text-align: center;
+    vertical-align: middle;
+    margin-left: -97px;
+    margin-top: 80px;
+}
+
+.title404 {
+    font-size: 9rem;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    color: #EFF8FF;
+
+
+
+}
+
+.container {
+
+    width: 100%;
+    overflow-x: hidden;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1440px;
+}
+
+.img404 {
+
+    background-image: url(https://i.ibb.co/44RjKxX/technician-seal.png);
+    width: 100%;
+    height: 358px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+
+.center {
+position: absolute;
+margin: auto;
+width: 60%;
+left: 393px;
+top: 30px;
+}
+
+.center2 {
+
+margin: auto;
+width: 60%;
+text-align: center;
+
+}
+
+.banner404 {
+
+  position: relative;
+  height: 400px;
+}
+
+
+.text404 {
+
+    margin-bottom: 0.5rem;
+    font-family: "Nunito", "Helvetica", "sans-serif";
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+
   </style>
 </head>
-
-<body class="rails-default-error-page">
+<body class="background">
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+  <div class="container">
+    <div class="banner404">
+      <div class="banner2">
+        <h1 class="title404">500</h1>
+      </div>
+      <div class="img404 center"></div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="dialog center2">
+      <div>
+        <h1 class="text404">Looks like something went wrong...</h1>
+        <p class="text404">Our best seals are looking into this issue, please try again later.</p>
+      </div>
+
+        <p class="text404">You can go back to the home page by clicking <a href="https://aprooft.com/">here</a>.</p>
+    </div>
   </div>
 </body>
 </html>
